@@ -10,6 +10,7 @@ import java.util.function.BiConsumer;
 import java.util.function.BinaryOperator;
 import java.util.function.Consumer;
 import java.util.function.Function;
+import java.util.function.Predicate;
 import java.util.function.Supplier;
 import java.util.function.ToLongFunction;
 import java.util.stream.Collector;
@@ -42,8 +43,9 @@ public abstract class MalleableString {
    *     whole of this.
    * @param indentation The number of spaces used per level of indentation.
    * @param singleLineCommentPrefix The prefix that marks the start of a single-line comment.
+   * @return Whether the best representation changed.
    */
-  public abstract void findBestRepresentation(
+  public abstract boolean findBestRepresentation(
       Supplier<RenderResult> providedRender,
       ToLongFunction<RenderResult> badness,
       int width,
@@ -89,6 +91,14 @@ public abstract class MalleableString {
   public static MalleableString anyOf(Object... possibilities) {
     return new Leaf(objectArrayToString(possibilities));
   }
+
+  /**
+   * Apply the given constraint to leaf strings of this.
+   *
+   * <p>This is done on a best-effort basis in the sense that if no options satisfy the constraint,
+   * the constraint is not applied.
+   */
+  public abstract MalleableString constrain(Predicate<String> constraint);
 
   private static String[] objectArrayToString(Object[] objects) {
     String[] ret = new String[objects.length];
@@ -276,7 +286,7 @@ public abstract class MalleableString {
       int numCommentsDisplacedHere = 0;
       if (commentsFromChildren.stream().anyMatch(s -> !s.isEmpty())) {
         for (int i = 0; i < commentsFromChildren.size(); i++) {
-          if (!FormattingUtils.placeComment(
+          if (!FormattingUtil.placeComment(
               commentsFromChildren.get(i),
               stringComponents,
               i,
@@ -317,7 +327,7 @@ public abstract class MalleableString {
         if (i > 0) minNonCommentWidth = Math.min(minNonCommentWidth, i);
       }
       for (int i : lineLengths) {
-        if (i < minNonCommentWidth + FormattingUtils.MAX_WHITESPACE_USED_FOR_ALIGNMENT) {
+        if (i < minNonCommentWidth + FormattingUtil.MAX_WHITESPACE_USED_FOR_ALIGNMENT) {
           maxNonIgnoredCommentWidth = Math.max(maxNonIgnoredCommentWidth, i);
           numIgnored--;
         }
@@ -348,7 +358,7 @@ public abstract class MalleableString {
     }
 
     @Override
-    public void findBestRepresentation(
+    public boolean findBestRepresentation(
         Supplier<RenderResult> providedRender,
         ToLongFunction<RenderResult> badness,
         int width,
@@ -356,35 +366,62 @@ public abstract class MalleableString {
         String singleLineCommentPrefix) {
       this.width = width;
       keepCommentsOnSameLine = true;
-      optimizeChildren(providedRender, badness, width, indentation, singleLineCommentPrefix);
+      // Multiple calls to optimizeChildren may be required because as parts of the textual
+      // representation are updated, the optimal representation of other parts may change.
+      // For example, if the text is wider than 100 characters, the line may only need to be
+      // broken in one place, but it will be broken in multiple places a second optimization pass
+      // is not made. This is a heuristic in the sense that two passes are not guaranteed to result
+      // in a fixed point, but since a subsequent call to the formatter will get the same AST and
+      // therefore have the same starting point, the formatter as a whole should still be
+      // idempotent.
+      var everChanged = false;
+      var changed =
+          optimizeChildren(providedRender, badness, width, indentation, singleLineCommentPrefix);
+      everChanged = changed;
+      if (changed)
+        changed =
+            optimizeChildren(providedRender, badness, width, indentation, singleLineCommentPrefix);
       if (components.stream()
           .noneMatch(
               it ->
                   it.render(indentation, singleLineCommentPrefix, false, null)
                       .unplacedComments
                       .findAny()
-                      .isPresent())) return;
+                      .isPresent())) return changed;
       long badnessTrue = badness.applyAsLong(providedRender.get());
       keepCommentsOnSameLine = false;
-      optimizeChildren(providedRender, badness, width, indentation, singleLineCommentPrefix);
+      changed =
+          optimizeChildren(providedRender, badness, width, indentation, singleLineCommentPrefix);
+      everChanged |= changed;
       long badnessFalse = badness.applyAsLong(providedRender.get());
       keepCommentsOnSameLine = badnessTrue < badnessFalse;
-      optimizeChildren(providedRender, badness, width, indentation, singleLineCommentPrefix);
-      optimizeChildren(providedRender, badness, width, indentation, singleLineCommentPrefix);
+      if (changed)
+        changed =
+            optimizeChildren(providedRender, badness, width, indentation, singleLineCommentPrefix);
+      if (changed)
+        optimizeChildren(providedRender, badness, width, indentation, singleLineCommentPrefix);
+      return everChanged;
     }
 
-    private void optimizeChildren(
+    private boolean optimizeChildren(
         Supplier<RenderResult> providedRender,
         ToLongFunction<RenderResult> badness,
         int width,
         int indentation,
         String singleLineCommentPrefix) {
-      components
-          .reverse()
-          .forEach(
+      return components.reverse().stream()
+          .anyMatch(
               it ->
                   it.findBestRepresentation(
                       providedRender, badness, width, indentation, singleLineCommentPrefix));
+    }
+
+    @Override
+    public MalleableString constrain(Predicate<String> constraint) {
+      for (var component : components) {
+        component.constrain(constraint);
+      }
+      return this;
     }
 
     @Override
@@ -409,14 +446,14 @@ public abstract class MalleableString {
     }
 
     @Override
-    public void findBestRepresentation(
+    public boolean findBestRepresentation(
         Supplier<RenderResult> providedRender,
         ToLongFunction<RenderResult> badness,
         int width,
         int indentation,
         String singleLineCommentPrefix) {
       this.width = width;
-      nested.findBestRepresentation(
+      return nested.findBestRepresentation(
           providedRender, badness, width - indentation, indentation, singleLineCommentPrefix);
     }
 
@@ -438,7 +475,7 @@ public abstract class MalleableString {
               codeMapTag,
               sourceEObject != null ? sourceEObject : enclosingEObject);
       String renderedComments =
-          FormattingUtils.lineWrapComments(
+          FormattingUtil.lineWrapComments(
               result.unplacedComments.toList(), width - indentation, singleLineCommentPrefix);
       return new RenderResult(
           this.comments.stream(),
@@ -447,6 +484,12 @@ public abstract class MalleableString {
                   : renderedComments + "\n" + result.rendering)
               .replaceAll("(?<=\n|^)(?=\\h*\\S)", " ".repeat(indentation)),
           result.levelsOfCommentDisplacement());
+    }
+
+    @Override
+    public MalleableString constrain(Predicate<String> constraint) {
+      nested.constrain(constraint);
+      return this;
     }
   }
 
@@ -462,12 +505,13 @@ public abstract class MalleableString {
     }
 
     @Override
-    public void findBestRepresentation(
+    public boolean findBestRepresentation(
         Supplier<RenderResult> providedRender,
         ToLongFunction<RenderResult> badness,
         int width,
         int indentation,
         String singleLineCommentPrefix) {
+      var initialChosenPossibility = getChosenPossibility();
       bestPossibility =
           Collections.min(
               getPossibilities(),
@@ -479,9 +523,10 @@ public abstract class MalleableString {
                 return Math.toIntExact(badnessA - badnessB);
               });
       if (bestPossibility instanceof MalleableString ms) {
-        ms.findBestRepresentation(
-            providedRender, badness, width, indentation, singleLineCommentPrefix);
+        if (ms.findBestRepresentation(
+            providedRender, badness, width, indentation, singleLineCommentPrefix)) return true;
       }
+      return getChosenPossibility() != initialChosenPossibility;
     }
 
     /** Return the best representation of this. */
@@ -527,23 +572,31 @@ public abstract class MalleableString {
               sourceEObject != null ? sourceEObject : enclosingEObject)
           .with(comments.stream());
     }
+
+    @Override
+    public MalleableString constrain(Predicate<String> constraint) {
+      for (var possibility : possibilities) {
+        possibility.constrain(constraint);
+      }
+      return this;
+    }
   }
 
   /** A {@code Leaf} can be represented by multiple possible {@code String}s. */
   private static final class Leaf extends MalleableStringWithAlternatives<String> {
-    private final ImmutableList<String> possibilities;
+    private List<String> possibilities;
 
     private Leaf(String[] possibilities) {
-      this.possibilities = ImmutableList.copyOf(possibilities);
+      this.possibilities = List.of(possibilities);
     }
 
     private Leaf(String possibility) {
-      this.possibilities = ImmutableList.of(possibility);
+      this.possibilities = List.of(possibility);
     }
 
     @Override
     protected List<String> getPossibilities() {
-      return this.possibilities;
+      return possibilities;
     }
 
     @Override
@@ -563,6 +616,13 @@ public abstract class MalleableString {
               ? CodeMap.Correspondence.tag(enclosingEObject, getChosenPossibility(), true)
               : getChosenPossibility(),
           0);
+    }
+
+    @Override
+    public MalleableString constrain(Predicate<String> constraint) {
+      var newPossibilities = possibilities.stream().filter(constraint).toList();
+      if (!newPossibilities.isEmpty()) possibilities = newPossibilities;
+      return this;
     }
   }
 }
